--- a/css/custom.css
+++ b/css/custom.css
@@ -83,7 +83,7 @@ input[placeholder= "Password"], input[placeholder="Email or phone number"]{
     padding: 50px;
     margin-left:auto;
     margin-right: auto;
-    margin-top: 300px
+    margin-top: auto;
     }
         h1{
             font-family: "titulos";
