--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-#logoimg{
+#logo-img{
     width: 10em;
     margin-bottom: 15px;
 }
@@ -7,7 +7,7 @@
     
 }
 
-#formulariologin{
+#formulario-login{
     width: 600px;
     margin: auto;
     margin-top: 10em;
@@ -15,6 +15,23 @@
     font-family: 'Google Sans',arial,sans-serif;
     border-radius: 10px; 
 }
+
+
+input[type= "Password"], input[type="email"]{
+    width: 100%;
+    font-size: 20px;
+    padding: 10px 10px 10px 10px;
+    border-radius: 5px;
+    border-style: solid;
+    border: 0px;
+    background-color: #72717107;
+    color: grey;
+    margin: auto;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+
+
 #formulariocrear{
     width: 600px;
     margin: auto;
@@ -63,28 +80,14 @@
     background: #4285f4;
 }
 
-
-input[placeholder= "Password"], input[placeholder="Email or phone number"]{
-    width: 100%;
-    font-size: 18px;
-    padding: 10px 1rem;
-    border-radius: 5px;
-    border: 0px;
-    background-color: #333333;
-    color: grey;
-    margin: auto;
-    margin-bottom: 15px;
-    box-sizing: border-box;
+a:hover{
+    background-color: #085f887a;
+    transition: 0.3s background-color;
 }
-#login{
-    background-color: rgba(12, 12, 12, 0.842);
-    color:rgb(255, 255, 255);
-    width: 300px;
-    padding: 50px;
-    margin-left:auto;
-    margin-right: auto;
-    margin-top: auto;
-    }
-        h1{
-            font-family: "titulos";
-        }
+#logo-drivee{
+    width: 50px;
+    margin-bottom: 15px;
+}
+a{
+    color:white;
+}
