--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-#logo-img{
+.logo-img{
     width: 10em;
     margin-bottom: 15px;
 }
@@ -90,4 +90,39 @@ a:hover{
 }
 a{
     color:white;
+}
+.bg-dark{
+    background-color: rgba(30, 92, 185, 0.87)!important;
+}
+
+#editor{
+    background-color: rgba(14, 47, 119, 0.377);
+}
+
+.propiedad{
+    width: 100%;
+    font-size: 20px;
+    padding: 10px 10px 10px 10px;
+    border-radius: 5px;
+    border-style: solid;
+    border: 0px;
+    background-color: #ffffff;
+    color: rgb(255, 255, 255);
+    margin: auto;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+
+.btn-outline-success{
+    background-color: #42f44249;
+    color:white;
+
+}
+.planes{
+    background: #202124;
+    color: white;
+}
+.planes:hover{
+    background-color: #3c50038c;
+    transition: 0.2s;
 }
