--- a/css/custom.css
+++ b/css/custom.css
@@ -31,6 +31,9 @@ input[type= "Password"], input[type="email"]{
     box-sizing: border-box;
 }
 
+.imagen{
+    width: 30%;
+}
 
 #formulariocrear{
     width: 600px;
