--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -59,10 +59,31 @@ input[type= "Password"], input[type="email"]{
 
 .btn-primary{
     color: #fff;
-    border-radius: 5px;
-    background: #4285f4;
-}
+    background-color: #1e7e34;
+    border-color: #1c7430;
+        /* display: inline-block; */
+ }
 
+
+.btn-planes{
+    color: #fff;
+    background-color: #28a745;
+    border-color: #28a745;
+    display: inline-block;
+    font-weight: 400; 
+    text-align: center; 
+    white-space: nowrap; 
+    vertical-align: middle; 
+    -webkit-user-select: none; 
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent; 
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+   }
 
 #ayudabody{
     color: #202124;
